fixed alignment in faq

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -329,6 +329,13 @@ a:hover {
   justify-content: center;
 }
 
+.question-align {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+
 .rotate {
   transform: rotate(45deg);
 }
